<resources>
    <string name="app_name">Android Java Geekbrains Calc</string>
    <string name="calc_button_7">7</string>
    <string name="calc_button_8">8</string>
    <string name="calc_button_9">9</string>
    <string name="calc_button_remove_all">C</string>
    <string name="calc_button_4">4</string>
    <string name="calc_button_5">5</string>
    <string name="calc_button_6">6</string>
    <string name="calc_button_multiply">*</string>
    <string name="calc_button_1">1</string>
    <string name="calc_button_2">2</string>
    <string name="calc_button_3">3</string>
    <string name="calc_button_0">0</string>
    <string name="calc_button_00">00</string>
    <string name="calc_button_equals">=</string>
    <string name="calc_button_plus">+</string>
    <string name="calc_button_dot">.</string>
    <string name="calc_button_divide">/</string>
    <string name="calc_button_minus">-</string>
    <string name="dark_theme">Dark theme</string>
    <string name="settings">settings</string>
</resources>