<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main__output_text"
        style="@style/ThemeCalcOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/main__container_calc"
        app:layout_constraintLeft_toLeftOf="@+id/main__container_calc"
        app:layout_constraintRight_toRightOf="@+id/main__container_calc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <GridLayout
        android:id="@+id/main__container_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="@integer/countColumn"
        android:orientation="horizontal"
        android:padding="0dp"
        android:rowCount="@integer/countRow"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main__output_text">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_7"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_8"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_9"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_divide"
            style="@style/ThemeCalcButtonVariant"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_remove_all"
            style="@style/ThemeCalcButtonVariant"
            android:layout_rowSpan="2"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_remove_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_4"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_5"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_6"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_multiply"
            style="@style/ThemeCalcButtonVariant"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_1"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_2"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_3"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_minus"
            style="@style/ThemeCalcButtonVariant"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_equals"
            style="@style/ThemeCalcButtonVariant"
            android:layout_rowSpan="2"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_equals" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_0"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_dot"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_00"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc_button_plus"
            style="@style/ThemeCalcButtonVariant"
            android:minWidth="@dimen/min_width_calc_button"
            android:text="@string/calc_button_plus" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>